[tool.poetry]
name = "hll-poc"
version = "0.1.0"
description = ""
authors = ["Michal <m.strumecki@clearcode.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
robyn = "^0.57.1"
HLL = "^2.0.3"
requests = "^2.32.3"
tqdm = "^4.66.4"
codetiming = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
